<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_5dp"
    android:elevation="@dimen/_10dp"
    android:padding="@dimen/_30dp"
    tools:context=".activities.ProfileActivity">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProfileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile_info"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

    <TextView
        android:id="@+id/tvInfoPhoneVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/profile_setup_instructions"
        android:textSize="@dimen/_12sp"
        app:layout_constraintTop_toBottomOf="@id/tvProfileInfo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:elevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="@dimen/_5dp"
        app:cardMaxElevation="@dimen/_5dp"
        app:layout_constraintTop_toBottomOf="@id/tvInfoPhoneVerification"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_et_phone_number"
                android:gravity="center"
                android:hint="@string/enter_your_name"
                android:padding="@dimen/_10dp"
                android:textSize="@dimen/_15sp" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5dp"
                android:background="@drawable/selector_btn_signup"
                android:text="@string/setup_profile"
                android:textColor="@color/lightGrey" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>