<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:padding="@dimen/_5dp"
    >
<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/ivAvatar"
    android:layout_width="@dimen/_42dp"
    android:layout_height="@dimen/_42dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:src="@drawable/avatar"/>
    <TextView
        android:id="@+id/tvPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:text="@string/sample_name"
        android:textColor="#252121"
        android:textSize="@dimen/_14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLastMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_chat"
        android:textSize="@dimen/_12sp"
        app:layout_constraintStart_toStartOf="@id/tvPersonName"
        app:layout_constraintTop_toBottomOf="@+id/tvPersonName" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_time"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ivAvatar"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:background="@color/black"
        android:layout_marginTop="@dimen/_5dp"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar"
        />
</androidx.constraintlayout.widget.ConstraintLayout>