<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:src="@drawable/avatar"
        android:background="?selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPhotoChange"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/ic_baseline_add_photo_alternate_24"
        app:layout_constraintBottom_toBottomOf="@+id/ivAvatar"
        app:layout_constraintEnd_toEndOf="@+id/ivAvatar" />

    <LinearLayout
        android:id="@+id/containerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/username"
            android:textColor="@color/lightGrey"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_weight="2"
            android:textColor="@color/lightGrey" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/containerUsername">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/about"
            android:textColor="@color/lightGrey"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/etAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_weight="2" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:background="@drawable/selector_btn_save_setting"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/partition"
        app:layout_constraintEnd_toEndOf="@id/partition" />

    <View
        android:id="@+id/partition"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_background_settings"
        android:paddingTop="@dimen/_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partition">


        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/_5dp"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:drawablePadding="@dimen/_5dp"
            android:gravity="center"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvPrivacyPolicy"
            app:layout_constraintTop_toBottomOf="@id/tvPrivacyPolicy" />

        <TextView
            android:id="@+id/tvInviteAFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/ic_baseline_group_add_24"
            android:drawablePadding="@dimen/_5dp"
            android:gravity="center"
            android:text="@string/invite_a_friend"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvPrivacyPolicy"
            app:layout_constraintTop_toBottomOf="@id/tvAboutUs" />

        <TextView
            android:id="@+id/tvNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/ic_baseline_notifications_active_24"
            android:drawablePadding="@dimen/_5dp"
            android:gravity="center"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvPrivacyPolicy"
            app:layout_constraintTop_toBottomOf="@id/tvInviteAFriend" />

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:drawableStart="@drawable/ic_baseline_help_24"
            android:drawablePadding="@dimen/_5dp"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvPrivacyPolicy"
            app:layout_constraintTop_toBottomOf="@id/tvNotification" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>